<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_base_dialog">BaseDialogActivity</string>
    <string name="title_activity_interval_dialog">IntervalDialogActivity</string>
    <string name="title_activity_start_time">StartTimeActivity</string>
    <string name="title_activity_end_time">EndTimeActivity</string>
    <string name="title_activity_sleep_monitor">SleepMonitorActivity</string>
    <string name="title_activity_sleep_monitor_target">SleepMonitorTargetActivity</string>
    <string name="title_activity_sleep_monitor_start">SleepMonitorStartActivity</string>
    <string name="title_activity_sleep_monitor_end">SleepMonitorEndActivity</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="title_activity_clock_set_activity_1">ClockSetActivity_1</string>
    <string name="title_activity_clock_set_activity_2">ClockSetActivity_2</string>
    <string name="title_activity_clock_set_activity_3">ClockSetActivity_3</string>
    <string name="title_activity_signature_set">SignatureSetActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_height">HeightActivity</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="title_activity_birthday">BirthdayActivity</string>
    <string name="title_activity_pedometer">PedometerActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_incoming">IncomingActivity</string>
    <string name="title_activity_incoming_starttime">IncomingStarttimeActivity</string>
    <string name="title_activity_incoming_endtime">IncomingEndtimeActivity</string>
    <string name="title_activity_abstract_set2">AbstractSet2Activity</string>
    <string name="title_activity_callfaker">CallfakerActivity</string>
    <string name="title_activity_callfaker_from">CallfakerFromActivity</string>

    <!-- 以下是 需要翻译的内容 -->
    <string name="app_name">E Watch</string>
    <string name="incoming_message">Incoming message</string>
    <string name="hello_world">Hello world!</string>
    <string name="cursor_random">cursor in random</string>
    <string name="sport_pedo_value">99999</string>
    <string name="pedometer">Pedometer</string>
    <string name="sport_goal">20000</string>
    <string name="unit_steps">Steps</string>
    <string name="sport_tips">You had completed 50%,come on</string>
    <string name="sport_burned_value">3000</string>
    <string name="sport_burned">Burned</string>
    <string name="sport_burned_unit">kCal</string>
    <string name="sport_time">Time</string>
    <string name="sport_time_value">3000</string>
    <string name="sport_time_unit">h</string>
    <string name="sport_distance">Distance</string>
    <string name="sport_distance_value">3000</string>
    <string name="sport_distance_unit">km</string>
    <string name="pull_to_refresh">pull_to_refresh</string>
    <string name="updated_at">updated_at</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="clock">Clock</string>
    <string name="disconnect_reminder">Disconnect reminder</string>
    <string name="remote_camera">Remote camera</string>
    <string name="seacrch_i2_watch">Search E watch</string>
    <string name="record">History Record</string>
    <string name="brightness">Brightness</string>
    <string name="five">5</string>
    <string name="add">+</string>
    <string name="jian">-</string>
    <string name="signatures">Signatures</string>
    <string name="signature_is_not_set">Signature is not set</string>
    <string name="incoming_reminder">Incoming reminder</string>
    <string name="callfaker">Callfaker</string>
    <string name="shutdown_i2_watch">Shutdown watch</string>
    <string name="title_activity_spalish">SpalishActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="sleep">Sleep</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="light_sleep">Light sleep</string>
    <string name="awake">Awake</string>
    <string name="sleep_tips">Your sleep is good.</string>
    <string name="menu">Menu</string>
    <string name="sport_reminder">Sport reminder</string>
    <string name="sleep_monitor">Sleep monitor</string>
    <string name="interval">Interval</string>
    <string name="unit_min">min</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="repeat">Repeat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wen">Wen</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="target">Target</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sport_record">Sport</string>
    <string name="sleep_record">Sleep</string>
    <string name="signature_setting">Signature setting</string>
    <string name="can_not_be_empty">Can not be empty</string>
    <string name="maximun_16_characters">Maximun 14 characters</string>
    <string name="supports_only_letters_and_numbers">Supports only letters and numbers</string>
    <string name="name">Name :</string>
    <string name="please_write_name">please write name</string>
    <string name="phone">Phone :</string>
    <string name="please_write_phone">please write phone</string>
    <string name="is_close">Click Confirm to close I2 watch.</string>
    <string name="setting">Setting</string>

    <string-array name="cursor_list">
        <item name="random">Contacts at random</item>
        <item name="choose"> Contacts for choose</item>
        <item name="custom"> Custom</item>
    </string-array>

    <string name="personal_information">Personal information</string>
    <string name="pedometer_target">Pedometer target</string>
    <string name="about">About</string>
    <string name="name_personal">Name</string>
    <string name="input_your_name_">Input your name.</string>
    <string name="gender">Gender</string>
    <string name="sport_tips_start">You have finished   </string>
    <string name="sport_tips_end">,come on!</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="birthday">Birthday</string>
    <string name="walk">walk about</string>
    <string name="km">km</string>
    <string name="expend">expend about</string>
    <string name="expert_advice">Expert advice</string>
    <string name="advice_sport">10,000 steps daily exercise is a healthy and active lifestyle</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="heavy">Heavy</string>
    <string name="disconnected">disconnected</string>
    <string name="title_activity_record_menu">RecordMenuActivity</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_virtual">VirtualActivity</string>
    <string name="virtual_call_hands_free">Hands-free</string>
    <string name="virtual_call_contacts">Contacts</string>
    <string name="virtual_call_add_call">Add call</string>
    <string name="virtual_call_dialpad">Dial pad</string>
    <string name="virtual_call_record">Record</string>
    <string name="virtual_call_maintain">Maintain</string>
    <string name="title_activity_sina">SinaActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <!-- new -->
    <string name="search_unconnected">Bluetooth connectivity</string>
    <string name="xialashuaxin">Drop can be refreshed</string>
    <string name="time_setting">Time setting</string>
    <string name="sync">Synchronous mobile phone settings</string>
    <string name="hour">\'</string>
    <string name="min">\"</string>
    <string name="sleep_info">Sleep quality:excellent</string>
    <string name="sleep_info_normal">Sleep quality:normal</string>
    <string name="sleep_info_bad">Sleep quality:bad</string>
    <string name="sleep_info_default">Sleep quality:No data</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect_device">Connecting equipment</string>
    <string name="connectting">connecting</string>
    <string name="unbind">Release bound?</string>
    <string name="no_binded_device">Non binding equipment</string>
    <string name="info_connect">[Connected]</string>
    <string name="info_unconnected">[Disconnect]</string>
    <string name="un_binded">[Not bound]</string>
    <string name="_b17watch">Binding Watch</string>
    <string name="device_nearby">Nearby equipment</string>
    <string name="app_version">App version:</string>
    <string name="unknown">unknown</string>
    <string name="sync_history">Sync Bracelet historical data</string>
    <string name="sync_history_time_out">Synchronous historical data timeout</string>
    <string name="sync_history_all">Synchronize all historical records</string>
    <string name="sync_history_today">Sync today</string>
    <string name="sleep_deep">Sleep Deep</string>
    <string name="hour_char">hour</string>
    <string name="sleep_light">Sleep Light</string>
    <string name="sleep_awak">Awak</string>
    <string name="cal">Consumption</string>
    <string name="unit_cal">Kcal</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="unit_distance">Km</string>
    <string name="bind_device">Bind Device</string>
    <string name="weekday">Weekday</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="target_count">Target :</string>
    <string name="fenxi">Province</string>
    <string name="complete_percent">Completion rate</string>
    <string name="frg_target">Target</string>
    <string name="count">Statistics</string>
    <string name="sleep_deep_count">Sleep deep</string>
    <string name="sleep_light_light">Sleep light</string>
    <string name="zhouqi">Cycle</string>
    <string name="bushu">Steps</string>
    <string name="minute_unit">m</string>
    <string name="unit_month"> M</string>
    <string name="unit_day"></string>
    <string name="confirm_exit">Exit the app ?</string>
    <string name="share">Share</string>
    <string name="title_activity_shared">SharedActivity</string>
    <string name="name_is_null">Name is empty</string>
    <string name="number_is_null">Number is empty</string>
    <string name="test_vartual">Try</string>
    <string name="loading_sleep">Loading sleep data</string>
    <string name="sycn_setting_ing">Syncing</string>
    <string name="title_activity_water">WaterActivity</string>

</resources>