<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tv_sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/signature_setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >


        <com.suping.i2_watch.view.CleanEditText
            android:id="@+id/ed_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/can_not_be_empty"
            android:maxLength="14"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:width="220dp" >

            <requestFocus />
        </com.suping.i2_watch.view.CleanEditText>

        <TextView
            android:id="@+id/tips_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximun_16_characters"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tips_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supports_only_letters_and_numbers"
            android:textColor="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bottom_left_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/cancel"
            android:textColor="@drawable/selector_text_cancel" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bottom_right_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/confirm"
            android:textColor="@drawable/selector_text_confirm" />
    </LinearLayout>

</RelativeLayout>