<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <include layout="@layout/top_layout" />

  <com.suping.i2_watch.view.DampingScrollView
      android:scrollbars="none"
                  android:background="@color/grey_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
  
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


         
			     <TextView
			         android:layout_marginLeft="20dp"
			         android:layout_marginTop="40dp"
			         android:layout_marginBottom="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                  style="@style/title_grey"
                    android:text="@string/time_setting" />
			    <LinearLayout 
			        android:layout_height="wrap_content"
			        android:layout_width="match_parent"
			        android:orientation="vertical"
			        android:background="@color/white"
			        >
			           <View
                style="@style/line"
               />
            <RelativeLayout
                android:id="@+id/rl_interval"
                style="@style/itemlist"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/interval" />

                <TextView
                    android:id="@+id/tv_interval_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@id/img_right_1"
                    android:text="@string/unit_min"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/tv_interval_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/tv_interval_unit"
                    android:textColor="@color/grey" />

                <ImageView
                    android:id="@+id/img_right_1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/icon_right_arrow" />
            </RelativeLayout>

            <View
                style="@style/line"
                android:layout_marginLeft="20dp" />

            <RelativeLayout
                android:id="@+id/rl_start"
                style="@style/itemlist"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@+id/tv_start_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/start_time" />

                <TextView
                    android:id="@+id/tv_start_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@id/img_right_2"
                    android:textColor="@color/grey" />

                <ImageView
                    android:id="@+id/img_right_2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/icon_right_arrow" />
            </RelativeLayout>

            <View
                style="@style/line"
                android:layout_marginLeft="20dp" />

            <RelativeLayout
                android:id="@+id/rl_end"
                style="@style/itemlist"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@+id/tv_end_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/end_time" />

                <TextView
                    android:id="@+id/tv_end_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@id/img_right_3"
                    android:textColor="@color/grey" />

                <ImageView
                    android:id="@+id/img_right_3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/icon_right_arrow" />
            </RelativeLayout>
</LinearLayout> 
         <View
                style="@style/line"
               />
        	     <TextView
			         android:layout_marginLeft="20dp"
			         android:layout_marginTop="20dp"
			         android:layout_marginBottom="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
             style="@style/title_grey"
                    android:text="@string/zhouqi" />
        	              <View
                style="@style/line"
               />
            <LinearLayout
                style="@style/itemlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:layout_gravity="center"
              android:orientation="horizontal"
                    android:weightSum="7"  >



                    <TextView
                        android:id="@+id/tv_sun"
                        style="@style/weekday"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/sun" />

                    <TextView
                        android:id="@+id/tv_mon"
                        style="@style/weekday"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/mon" />

                    <TextView
                        android:id="@+id/tv_tue"
                        style="@style/weekday"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/tue" />

                    <TextView
                        android:id="@+id/tv_wen"
                        style="@style/weekday"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/wen" />

                    <TextView
                        android:id="@+id/tv_thu"
                        style="@style/weekday"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/thu" />

                    <TextView
                        android:id="@+id/tv_fri"
                        style="@style/weekday"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/fri" />

                    <TextView
                        android:id="@+id/tv_sat"
                        style="@style/weekday"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/sat" />
            </LinearLayout>
         <View
                style="@style/line"
               />
        </LinearLayout>
</com.suping.i2_watch.view.DampingScrollView>
</LinearLayout>