<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.suping.i2_watch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rg_sport_count"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_record_sport_count"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_record_sport_count_left"
            android:button="@null"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@drawable/selector_text_color_sport_record_count"
            android:textSize="@dimen/dime_top_text" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_weekday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_record_sport_count_center"
            android:button="@null"
            android:gravity="center"
            android:text="@string/weekday"
            android:textColor="@drawable/selector_text_color_sport_record_count"
            android:textSize="@dimen/dime_top_text" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_record_sport_count_center"
            android:button="@null"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@drawable/selector_text_color_sport_record_count"
            android:textSize="@dimen/dime_top_text" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rb_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_record_sport_count_right"
            android:button="@null"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@drawable/selector_text_color_sport_record_count"
            android:textSize="@dimen/dime_top_text" >
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_count" />

        <TextView
            android:id="@+id/tv_target_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="10dp"
        android:background="#000" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="240dp" >

        <com.suping.i2_watch.view.NewCountView
            android:id="@+id/count_sport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:line_color="@color/record_red"
            app:line_max="2000" />
    </FrameLayout>

  <com.suping.i2_watch.view.DampingScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/fenxi"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/complete_percent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_target_step_complete_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0.00%"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginStart="12dp"
                android:background="#ccc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/frg_target"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="@string/count"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/bushu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginStart="12dp"
                android:background="#ccc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/cal"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_cal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:background="#ccc" />
        </LinearLayout>
 </com.suping.i2_watch.view.DampingScrollView>

</LinearLayout>